--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "require-dev": {
         "phpunit/phpunit": "^11.1",
         "fakerphp/faker": "^1.23",
-        "mockery/mockery": "^1.6"
+        "mockery/mockery": "^1.6",
+        "friendsofphp/php-cs-fixer": "^3.62"
     },
     "autoload": {
         "psr-4": {
