--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "type": "project",
     "require": {
         "vlucas/phpdotenv": "^5.6",
-        "league/commonmark": "^2.4"
+        "league/commonmark": "^2.4",
+        "league/container": "^4.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.1",
