--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Database\\": "database/"
+            "Database\\": "database/",
+            "Database\\Migrations\\": "database/Migrations/"
         }
     }
 }
