--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,15 @@
 /.phpunit.cache
+/.phpunit.result.cache
 /node_modules
 /public/build
 /public/hot
-/public/imgs
+/public/imgs/avatars/*
+!/public/imgs/avatars/avatar.jpg
+/public/imgs/blog/*
+!/public/imgs/blog/.gitkeep
+/public/imgs/thumbs/*
+!/public/imgs/thumbs/.gitkeep
 /vendor
 .env
-.env.backup
-.env.production
-.phpunit.result.cache
-Homestead.json
-Homestead.yaml
-auth.json
 npm-debug.log
-yarn-error.log
-/.fleet
-/.idea
 /.vscode
-.crt
-.key
